fixes layout issues

--- a/assets/css/3-layout.styl
+++ b/assets/css/3-layout.styl
@@ -8,7 +8,7 @@
     display: flex;
     flex-grow: 0;
     flex-shrink: 1;
-    padding: 0 0.618rem .618rem;
+    padding: .618rem
   }
   .ge-header {
     flex-direction: row;
@@ -22,7 +22,7 @@
   }
   .ge-header__title {
     font-size: 1.45rem;
-    margin: 0 0 0 9rem;
+    margin: 0 0 0 6rem;
   }
   .ge-header__subtitle {
     font-size: 2.25vw;
@@ -37,10 +37,10 @@
       display: flex;
       flex-grow: 0;
       flex-shrink: 1;
-      height: 49px;
       width: 100%;
       order: 10;
-      flex-direction: column;
+      flex-direction: row;
+      justify-content: flex-start
       align-items: center;
       &__legalese {
           color: colorNeutralLightest
